--- a/scss/default/_form.scss
+++ b/scss/default/_form.scss
@@ -198,10 +198,6 @@
 
     }
 
-    span.Msg_Warn{
-        display: inline-block;
-        color: $Warn_Color01;
-    }
     div.Align_H{
         display: inline-block;
         vertical-align: top;
@@ -266,6 +262,19 @@
                 }
                 input[type="radio"]:CHECKED{
                     border-color: #FFFFFF;
+                }
+                input[disabled]{
+                    cursor: default;
+                    &:after {
+                        position: absolute;
+                        content: '';
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 50%;
+                        background-color:red;
+                    
+                      }
                 }
                 input[type="radio"]:CHECKED + span{
                     border-color: #AFAFAF;
