--- a/scss/default/_form.scss
+++ b/scss/default/_form.scss
@@ -209,6 +209,10 @@
 
             box-shadow: 0 1px 1px rgba(15, 15, 15, 0.5), 0 1px 3px rgba(0,0,0,0.5);
         }
+        textarea{
+            min-width: 500px;
+            min-height: 100px;
+        }
         select{
             background: $Label_Gradient01;
         }
