--- a/scss/default/_themes.scss
+++ b/scss/default/_themes.scss
@@ -165,6 +165,8 @@ $DetailsSummary_Color01: #101010;
 $DetailsSummary_Color01_HOVER: #202020;
 $DetailsSummary_Color01_ACTIVE: #050505;
 
+$Details_BorderColor01: rgba(255,255,255,.35);
+
 // BG
 $Details_BGColor01a: #202020;
 $Details_BGColor01b: #2F2F2F;
